[package]
name = "mysql_roamer"
version = "0.1.0"
authors = ["David Boon <david.boon@gmail.com>"]

[dependencies]
mysql = "*"
docopt = "*"
rustc-serialize = "*"
log = "0.3.1"
env_logger = "0.3.1"
time = "0.1"
ncurses = "5.80.0"
uuid = "*"

[dependencies.readline]
git = "https://github.com/evadnoob/rust-readline.git"


# [dependencies.mysql]
# version = "*"
# features = ["ssl"]
